<resources>
    <string name="app_name">MyRuns6-1</string>
    <string-array name="ui_settings_unit_preference">
        <item>Metric (Kilometers)</item>
        <item>Imperial (Miles)</item>
    </string-array>
    <string-array name="ui_start_input_type_items">
        <item>Manual Entry</item>
        <item>GPS</item>
        <item>Automatic</item>
    </string-array>
    <string-array name="ui_profile_photo_picker_items">
        <item>Open Camera</item>
        <item>Select from Gallery</item>
    </string-array>
    <string-array name="ui_manual_input_items">
        <item>Date</item>
        <item>Time</item>
        <item>Duration</item>
        <item>Distance</item>
        <item>Calories</item>
        <item>Heart Rate</item>
        <item>Comment</item>
    </string-array>
    <string name="dialog_fragment_tag_general">general_dialog_fragment</string>

    <string name="ui_profile_photo">Profile Photo:</string>
    <string name="action_settings">Settings</string>
    <string name="ui_proile_image_descripton">Your Profile Picture</string>
    <string name="ui_profile_button_change">Change</string>
    <string name="ui_profile_text_view_name">Name</string>
    <string name="ui_profile_text_field_name">Your Name</string>
    <string name="ui_profile_text_view_email">Email</string>
    <string name="ui_profile_text_field_email">Your Email</string>
    <string name="ui_profile_text_view_phone">Phone</string>
    <string name="ui_profile_text_field_phone">Your Phone Number</string>
    <string name="ui_profile_text_view_gender">Gender</string>
    <string name="ui_profile_gender_female">Female</string>
    <string name="ui_profile_gender_male">Male</string>
    <string name="ui_profile_text_view_class">Class</string>
    <string name="ui_profile_text_field_class">eg. 2012</string>
    <string name="ui_profile_text_view_major">Major</string>
    <string name="ui_profile_text_field_major">Your Major</string>
    <string name="ui_profile_button_save">Save</string>
    <string name="ui_profile_button_cancel">Cancel</string>
    <string name="preference_name">myruns_shared_preference</string>
    <string name="preference_key_profile_name">profile_name</string>
    <string name="preference_key_profile_email">profile_email</string>
    <string name="preference_key_profile_phone">profile_phone</string>
    <string name="preference_key_profile_gender">profile_gender</string>
    <string name="preference_key_profile_class">profile_class</string>
    <string name="preference_key_profile_major">profile_major</string>
    <string name="profile_photo_file_name">profile_photo.png</string>
    <string name="ui_profile_toast_save_text">Saved</string>
    <string name="temp_photo_file_name">temp_photo.png</string>
    <string name="cancel_message">Cancelled</string>
    <string name="ui_start_input_type_spinner_title">Input Type</string>
    <string name="ui_start_activity_type_spinner_title">Activity Type</string>
    <string name="ui_start_button_start_title">Start</string>
    <string name="ui_start_button_sync_title">Sync</string>
    <string name="ui_button_save_title">Save</string>
    <string name="ui_button_cancel_title">Cancel</string>
    <string name="ui_settings_category_account_title">Account Preferences</string>
    <string name="ui_settings_profile_summary">User Profile</string>
    <string name="ui_settings_profile_title">Name, Email, Class, etc</string>
    <string name="ui_settings_privacy_key">Privacy</string>
    <string name="ui_settings_privacy_summary">Posting your records anonymously</string>
    <string name="ui_settings_privacy_title">Privacy Setting</string>
    <string name="ui_settings_category_additional_title">Additional Settings</string>
    <string name="ui_settings_unit_display_key">UnitPreference</string>
    <string name="ui_settings_unit_display_summary">Select the units</string>
    <string name="ui_settings_unit_display_title">Unit Preference</string>
    <string name="ui_settings_comment_name">comment</string>
    <string name="ui_settings_comment_key">comment</string>
    <string name="ui_settings_comment_summary">Please enter your comments</string>
    <string name="ui_settings_comment_title">Comments</string>
    <string name="ui_settings_category_misc_title">Misc.</string>
    <string name="homepage_url">http://cs.dartmouth.edu/~campbell/cs65/cs65.html</string>
    <string name="ui_settings_homepage_title">Webpage</string>
    <string name="ui_manual_input_duration_title">Duration</string>
    <string name="ui_button_ok_title">Ok</string>
    <string name="ui_manual_input_distance_in_miles_title">Distance</string>
    <string name="ui_manual_input_calories_title">Calories</string>
    <string name="ui_manual_input_heartrate_title">Heart Rate</string>
    <string name="ui_manual_input_comment_hint">How did it go? Notes here.</string>
    <string name="ui_manual_input_comment_title">Comment</string>
    <string name="title_activity_map_display">Map</string>
    <string name="ui_profile_photo_picker_title">Pick Profile Picture</string>
    <string name="preference_key_unit_display">ui_settings_unit_display</string>
    <string name="ui_display_entry_activity_type_title">Activity type</string>
    <string name="ui_display_entry_date_time_title">Date and time</string>
    <string name="ui_display_entry_duration_title">Duration</string>
    <string name="ui_display_entry_distance_title">Distance</string>
    <string-array name="unit_display_name">
        <item>Metric (Kilometers)</item>
        <item>Imperial (Miles)</item>
    </string-array>
    <string-array name="unit_display_value">
        <item>@string/kilometers</item>
        <item>@string/miles</item>
    </string-array>

    <string name="kilometers">Kilometers</string>
    <string name="miles">Miles</string>
    <string name="feet">Feet</string>
    <string name="mile_per_hr">m/h</string>
    <string name="km_per_hr">km/h</string>
    <string name="ui_display_entry_heartrate_title">Heart Rate</string>
    <string name="ui_display_entry_calories_title">Calories</string>
    <string name="ui_display_entry_input_type_title">Input Type</string>
    <string name="title_activity_googlemaps">Map</string>
    <string name="title_activity_maps">Map</string>
    <!-- string name="google_app_id">64:C6:15:B7:61:38:B4:B1:78:E0:2E:6D:71:1B:F9:44:09:E0:A0:CD</string-->
</resources>
