<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ui_profile_photo"
            android:id="@+id/textView" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false" >

            <ImageView
                android:contentDescription="@string/ui_proile_image_descripton"
                android:id="@+id/imageProfile"
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:focusable="true"
                android:focusableInTouchMode="true" >

                <requestFocus />

            </ImageView>

            <Button
                android:id="@+id/btnChangePhoto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:onClick="onChangePhotoClicked"
                android:text="@string/ui_profile_button_change" >

            </Button>

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ui_profile_text_view_name"
            android:layout_margin="5dp"
            android:id="@+id/tvName" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/ui_profile_text_field_name"
            android:inputType="textCapWords"
            android:layout_margin="5dp"
            android:singleLine="true"
            android:id="@+id/etName" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ui_profile_text_view_email"
            android:layout_margin="5dp"
            android:id="@+id/tvEmail" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/ui_profile_text_field_email"
            android:layout_margin="5dp"
            android:inputType="textEmailAddress"
            android:singleLine="true"
            android:id="@+id/etEmail" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/ui_profile_text_view_phone"
            android:id="@+id/tvPhone" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:hint="@string/ui_profile_text_field_phone"
            android:inputType="phone"
            android:singleLine="true"
            android:id="@+id/etPhone" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/ui_profile_text_view_gender"
            android:id="@+id/tvGender" />

        <RadioGroup
            android:id="@+id/radioGender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:orientation="horizontal" >

            <RadioButton
                android:id="@+id/radioGenderF"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/ui_profile_gender_female" />

            <RadioButton
                android:id="@+id/radioGenderM"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/ui_profile_gender_male" >
            </RadioButton>

        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/ui_profile_text_view_class"
            android:id="@+id/tvClass" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:hint="@string/ui_profile_text_field_class"
            android:inputType="date"
            android:singleLine="true"

            android:id="@+id/etClass" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/ui_profile_text_view_major"
            android:id="@+id/tvMajor" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:hint="@string/ui_profile_text_field_major"
            android:inputType="text"
            android:singleLine="true"
            android:id="@+id/etMajor" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp" >

            <Button
                android:id="@+id/btnSave"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_weight="1"
                android:onClick="onSaveClicked"
                android:text="@string/ui_profile_button_save" >
            </Button>

            <Button
                android:id="@+id/btnCancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="30dp"
                android:layout_weight="1"
                android:text="@string/ui_profile_button_cancel" >
            </Button>
        </LinearLayout>
    </LinearLayout>
</ScrollView>